Move common ags vars to community-repo [ags]
(cherry picked from commit 79017a60552f7733e6df1deef4637684e4b2c8a0)